# DeepAgro

./: LICENSE.txt  README.md  pyproject.toml
src/agents/: api_calling_agent.py  app.py  best_crop_recommendation_agent.py  config.py  doctor_agent.py  main.py  planning_agent.py  summarizer_agent.py  testing_llm.py  user_conversation_agent.py
src/agents/tests/: conversation_test.py  test_agricultural_advisor.py
